# Activ3Ejercicio2

./: .gitignore  README.md
mini_turtle_task/: main.ipynb  main.py  pyproject.toml
mini_turtle_task/mini_turtle/: __init__.py  drawer_logic.py
